# badge-cache

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  badge.service.sample  docker.sh  fly.toml  nginx.conf.sample  update.py
ci/: before_deploy.sh
old/: .travis.yml  Cross.toml  badge.service.sample  nginx.conf.sample  update.py
src/: admin.rs  handlers.rs  lib.rs  logger.rs  main.rs  routes.rs  service.rs
static/: index.html
static/css/: base.css
templates/: base.html  landing.html  reset.html
