[package]
name = "badge-cache"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[[bin]]
name = "badge-cache"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2"
lazy_static = "0.2"
reqwest = "0.6"
url = "1"

chrono = { version = "0.3" }
time = "0.1"

iron = "*"
router = "*"
persistent = "*"
staticfile = "*"
mount = "*"
logger = "*"

log = "0.3"
env_logger = "0.4"

mime = "0.2"
params = "0.6"
tera = "0.10.6"
