[package]
name = "badge-cache"
version = "0.2.1"
authors = ["James Kominick <james.kominick@gmail.com>"]

[[bin]]
name = "badge-cache"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2"
lazy_static = "0.2"
reqwest = "0.7"
url = "1"
serde_json = "1"

chrono = "0.4"
time = "0.1"

iron = "0.5"
router = "*"
persistent = "*"
staticfile = "*"
mount = "*"
logger = "*"

log = "0.3"
env_logger = "0.4"

mime = "0.2"
params = "0.6"
tera = "0.10.6"
