[package]
name = "badge-cache"
version = "0.0.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-service = "1"
futures = "0.3.1"
anyhow = "1"

chrono = "0.4"
tera = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
async-mutex = "1"
reqwest = "0.10"

slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
slog-json = "2.3"

[dependencies.tokio]
version = "0.2"  # <0.3 required by actix
features = [
    "fs",
    "stream",
    "rt-core",  # rt in >0.3
    "rt-threaded",  # rt-multi-thread in >0.3
    "macros",
]
